# rust-axum-crud

./: .env.example  Cargo.toml
src/: main.rs  schema.rs
src/config/: database.rs  env.rs
src/handlers/: todo_handlers.rs
src/migrations/2026-07-20-145344-0000_create_todos/: up.sql
src/models/: api_response.rs  mod.rs  todo.rs
src/router/: todo_router.rs
