[package]
name = "crud"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["http2", "macros", "ws"] }
diesel = { version = "2.3.11", features = ["postgres"] }
dotenvy = "0.15.7"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
tokio = { version = "1.53.0", features = ["full"] }
uuid = { version = "1.24.0", features = ["v4"] }
